examples/test/testpolicy1735.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1735
  namespace: namespace481
spec:
  podSelector:
    matchLabels:
      key16: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value13
      podSelector:
        matchLabels:
          key17: value25
          key7: value25
          key48: value34
